[tool.poetry]
name = "mavens-ds-interviews"
version = "0.1.0"
description = ""
authors = ["GalFridman <88270175+gal-fridman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
jupyter = "^1.0.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
tensorflow-macos = "^2.13.0"
tensorflow-metal = "^1.0.1"
numpy = ">=1.22"
tensorflow-hub = "^0.14.0"
plotly = "^5.15.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas-gbq = "^0.19.2"
tqdm = "^4.65.2"
aiohttp = "^3.8.5"
nest-asyncio = "^1.5.7"
transformers = "^4.31.0"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
jupyter-contrib-nbextensions = "^0.5.1"
jupyter = "^1.0.0"
notebook = "^6.5.4"
jupyter-nbextensions-configurator = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
